package parkingLot;

public class Address {
    private int zipCode;
    private String address;
    private String city;
    private String state;
    private String country;

    // Getters and Setters
    // ...
}
