package parkingLot;

public class Admin extends Account {
    public boolean addParkingSpot(ParkingSpot spot) {
        // Logic to add a parking spot
        return true;
    }

    public boolean addDisplayBoard(DisplayBoard displayBoard) {
        // Logic to add a display board
        return true;
    }

    public boolean addEntrance(Entrance entrance) {
        // Logic to add an entrance
        return true;
    }

    public boolean addExit(Exit exit) {
        // Logic to add an exit
        return true;
    }

    public boolean resetPassword() {
        // Logic to reset password
        return true;
    }
}
