package parkingLot;

public class Car extends Vehicle {
    public void assignTicket(ParkingTicket ticket) {
        // Logic to assign a ticket to the car
    }
}
