package parkingLot;

public class Cash extends Payment {
    public boolean initiateTransaction() {
        // Logic to initiate a cash transaction
        return true;
    }
}
