package parkingLot;

public class CreditCard extends Payment {
    public boolean initiateTransaction() {
        // Logic to initiate a credit card transaction
        return true;
    }
}
