package parkingLot;

public class Entrance {
    private int id;

    public ParkingTicket getTicket() {
        // Logic to get a parking ticket
        return new ParkingTicket();
    }

    // Getters and Setters
    // ...
}
