package parkingLot;

public class Exit {
    private int id;

    public void validateTicket(ParkingTicket ticket) {
        // Logic to validate a parking ticket
    }

    // Getters and Setters
    // ...
}
