package parkingLot;

public class Large extends ParkingSpot {
    public boolean assignVehicle(Vehicle vehicle) {
        // Logic to check if the vehicle can be assigned
        return true;
    }
}
