package parkingLot;

public class MotorVehicle extends Vehicle {
    public void assignTicket(ParkingTicket ticket) {
        // Logic to assign a ticket to the motorcycle
    }
}
