package parkingLot;

public class Motorcycle extends ParkingSpot {
    public boolean assignVehicle(Vehicle vehicle) {
        // Logic to check if the vehicle can be assigned
        return true;
    }
}
