package parkingLot;

public class ParkingAttendant extends Account {
    public boolean processTicket(String ticketNumber) {
        // Logic to process a parking ticket
        return true;
    }

    public boolean resetPassword() {
        // Logic to reset password
        return true;
    }
}
