package parkingLot;

public class ParkingRate {
    private double hours;
    private double rate;

    public void calculate() {
        // Logic to calculate the rate
    }

    // Getters and Setters
    // ...
}
