package parkingLot;

enum PaymentStatus {
    COMPLETED,
    FAILED,
    PENDING,
    UNPAID,
    REFUNDED
}
