package parkingLot;

public class Person {
    private String name;
    private String address;
    private String phone;
    private String email;

    // Getters and Setters
    // ...
}
