package parkingLot;

public class Truck extends Vehicle {
    public void assignTicket(ParkingTicket ticket) {
        // Logic to assign a ticket to the truck
    }
}
