package parkingLot;

public class Van extends Vehicle {
    public void assignTicket(ParkingTicket ticket) {
        // Logic to assign a ticket to the van
    }
}
