package parkingLot;

public abstract class Vehicle {
    private int licenseNo;

    public abstract void assignTicket(ParkingTicket ticket);

    // Getters and Setters
    // ...
}
